--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
 h1 {
         padding: 0.2em;
-        background-color: rgba(17,17,17,0.6);
+        /* background-color: rgba(17,17,17,0.); */
     }
+
+
+section.present {
+    background-color: rgba(17,17,17,0.8);
+}
