--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,15 @@ h1 {
         /* background-color: rgba(17,17,17,0.); */
     }
 
-
-section.present {
-    background-color: rgba(17,17,17,0.8);
+.with-bg {
+  background-color: rgba(17,17,17,0.8);
 }
+
+section.present * {
+    /*background-color: rgba(17,17,17,0.8);*/
+}
+
+section.present
 
 .reveal table {
     font-size: 0.7em;
