--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,11 @@ section > :first-child:before {
   background-color: rgba(17,17,17,0.8);
   z-index: 0;
 }
-section > * {
+section > :first-child > span {
+  position: relative;
+  z-index: 1;
+}
+section > :nth-child(n + 1) {
   position: relative;
   z-index: 1;
 }
